--- a/api-backend/package.json
+++ b/api-backend/package.json
@@ -16,14 +16,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "class-validator": "^0.14.3",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
+    "routing-controllers": "^0.11.3",
     "typeorm": "^0.3.28"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.1",
     "@typescript-eslint/eslint-plugin": "^8.49.0",
