--- a/api-backend/package.json
+++ b/api-backend/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.3",
     "nodemon": "^3.1.11",
     "pg": "^8.16.3",
+    "redis": "^5.10.0",
     "reflect-metadata": "^0.2.2",
     "routing-controllers": "^0.11.3",
     "typeorm": "^0.3.28"
