--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -29,10 +29,27 @@ services:
       DB_USER: postgres
       DB_PASSWORD: postgres
       DB_NAME: mydb
+      REDIS_HOST: redis     
+      REDIS_PORT: 6379 
     ports:
     - "3000:3000"
     depends_on:
       - postgres
+      - redis 
+  redis:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - "6379:6379"
+    command: ["redis-server", "--appendonly", "yes"]  # enable persistence
+
+  redis-insight:
+    image: redis/redisinsight:latest
+    container_name: redis-insight
+    ports:
+      - "5540:5540"
+    depends_on:
+      - redis
       
   pgadmin:
     image: dpage/pgadmin4
